# tee-wallet

./: .gitignore  Cargo.toml  README.md
crates/limit_order/: Cargo.toml
crates/limit_order/src/: config.rs  lib.rs
crates/limit_order/src/dex/: errors.rs  mod.rs  quote.rs  swap.rs
crates/okx_dex/: Cargo.toml
crates/okx_dex/src/: config.rs
crates/okx_dex/src/api/: errors.rs  mod.rs  quote.rs  swap.rs
crates/proxy/: Cargo.toml  README.md
crates/proxy/config/: default.toml
crates/proxy/src/: config.rs  dns.rs  lib.rs  main.rs  tcp.rs  tcp2tcp.rs  traffic.rs  vsock.rs
crates/proxy/tests/: tcp_test.rs  vsock_test.rs
crates/scraper/: Cargo.toml  build.rs
crates/scraper/proto/: scraper.proto
crates/scraper/src/: config.rs  enclave.rs  errors.rs  host.rs  lib.rs
crates/scraper/src/core/: mod.rs  scraping_registry.rs  scraping_runner.rs
crates/scraper/src/dep/: mod.rs
crates/scraper/src/service/: mod.rs  scraper_svc.rs
crates/scraper/tests/: twitter_api.rs
crates/sig_server/: Cargo.toml  build.rs
crates/sig_server/config/: default.toml
crates/sig_server/log/: proxy.2025-02-06  proxy.telemetry.2025-02-06
crates/sig_server/proto/: attestation.proto  authorization.proto  sign.proto  signing.proto  test.proto
crates/sig_server/src/: cli.rs  config.rs  enclave.rs  errors.rs  host.rs  lib.rs
crates/sig_server/src/service/: attestation_svc.rs  auth_registry.rs  authorization_svc.rs  mod.rs  signing_svc.rs  test_svc.rs
crates/sig_server/tests/: attest_auth_sign.rs  attestation_test.rs  decryption_test.rs
crates/sig_server/tests/config/: test.toml
crates/trace/: Cargo.toml
crates/trace/src/: lib.rs
crates/twitter_v2/: Cargo.toml  README.md
crates/twitter_v2/src/query/: macros.rs
crates/utils/: Cargo.toml
crates/utils/src/: crypto.rs  lib.rs  middleware.rs
scripts/: DOCKERFILE  grpc.sh  remote.sh  run.sh
