[workspace]

members = [
    "crates/sig_server",
	"crates/trace", "crates/utils",
]

resolver = "2"

[workspace.package]
version="0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["nitro", "wallet", "tee"]

[workspace.dependencies]
serde_json = "1.0.120"
serde = "1.0.204"
config = "0.13.2"
anyhow = { version = "1.0.40", default-features = false }
log = { version = "0.4.14", default-features = false }
once_cell = "1.14"
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic-build = "*"