[workspace]

members = [ "crates/proxy",
    "crates/sig_server",
	"crates/trace", 
	"crates/utils",
]

resolver = "2"

[workspace.package]
version="0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["nitro", "wallet", "tee"]

[workspace.dependencies]
serde_json = "1.0.120"
serde_bytes = "0.11.15"
serde = "1.0.204"
config = "0.13.2"
anyhow = { version = "1.0.40", default-features = false }
log = { version = "0.4.14", default-features = false }
once_cell = "1.14"
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic-build = "*"
aws-nitro-enclaves-nsm-api = "0.4.0"
bytes = "1.1"
ed25519-dalek = "2.1.1"
rand = "0.8.4"
rsa = "0.9.7"
pkcs1 = "0.7.5"
hex = "0.4.3"