[workspace]

members = [ 
	"crates/proxy",
    "crates/sig_server",
	"crates/trace", 
	"crates/utils",
	"crates/limit_order",
]

resolver = "2"

[workspace.package]
version="0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["nitro", "wallet", "tee"]

[workspace.dependencies]
serde_json = "1.0.120"
serde_bytes = "0.11.15"
serde = "1.0.204"
config = "0.13.2"
anyhow = { version = "1.0.40", default-features = false }
log = { version = "0.4.14", default-features = false }
once_cell = "1.14"
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "io-util", "fs", "net"] }
tokio-stream = "0.1.17"
tokio-vsock = "0.7.0"
tonic-build = "*"
aws-nitro-enclaves-nsm-api = "0.4.0"
attestation-doc-validation = "0.9.0"
bytes = "1.1"
ed25519-dalek = "2.1.1"
rand = "0.8.4"
rsa = "0.9.7"
pkcs1 = "0.7.5"
hex = "0.4.3"
chrono = "0.4"
hmac = "0.12.1"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["json", "blocking"] }
url = "2.2"
base64 = "0.13"
ctor = "0.2.9"
solana-sdk = "2.1.13"
solana-client = "2.1.13"
bincode = "1.3"
httpmock = "0.7.0"
prost-types = "0.13.4"
bs58 = "0.5"
secp256k1 = "0.30.0"
sha3 = "0.10"
tonic-middleware = "0.2.3"