[package]
name = "okx_dex"
version = "0.1.0"
edition = "2021"

[dependencies]
trace={path="../trace"}
utils={path="../utils"}
chrono={ workspace = true}
hmac = {workspace = true}
sha2 = {workspace = true}
hex = {workspace = true}
config = { workspace = true }
serde = {workspace = true}
once_cell = {workspace = true}
reqwest = {workspace = true}
url = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
base64 = {workspace = true}
thiserror = {workspace = true}
serde_json = {workspace = true}
anyhow = {workspace = true}
solana-sdk = {workspace =true}
solana-client = {workspace =true}
bincode = {workspace = true}

[dev-dependencies]
ctor = {workspace = true}
httpmock = {workspace = true}