[package]
name = "proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
trace={path="../trace"}
tokio = {workspace = true}
tokio-stream = {workspace = true}
rand = {workspace = true}
tracing = { workspace = true } 
chrono = "0.4"
hickory-resolver = "0.24"
idna = "1.0.3"
serde = {workspace = true}
clap = {workspace = true}
tonic = {workspace = true}
config = {workspace = true}

[target.x86_64-unknown-linux-gnu.dependencies]
tokio-vsock = {workspace = true}