[package]
name = "scraper"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[[bin]]
name = "scraper"
path = "src/bin/main.rs"

[dependencies]
trace={path="../trace"}
utils={path="../utils"}
twitter_v2 = { path = "../twitter_v2"}
okx-dex = { path = "../okx_dex"}
tokio = {workspace = true}
tokio-stream = {workspace = true}
tracing = { workspace = true } 
config = {workspace = true}
tonic = {workspace = true}
prost = {workspace = true}
serde = {workspace = true}
serde_bytes = { workspace = true }
serde_json = { workspace = true }
once_cell={workspace = true}
aws-nitro-enclaves-nsm-api = {workspace = true}
bytes = {workspace = true}
ed25519-dalek = {workspace = true}
rand = {workspace = true}
rsa = {workspace = true}
hex = {workspace = true}
prost-types = {workspace = true}
thiserror = {workspace = true}
tonic-middleware = {workspace = true}
clap = {workspace = true}
bs58 = {workspace = true}
time = {workspace = true}
bincode = {workspace = true}
solana-sdk = {workspace = true}
solana-client = {workspace = true}

[build-dependencies]
tonic-build = {workspace = true}

[target.x86_64-unknown-linux-gnu.dependencies]
proxy = { path = "../proxy" }
tokio-vsock = "0.7.0"
vsock = "0.3"
