[package]
name = "sig_server"
version = "0.1.0"
edition = "2021"

[dependencies]
trace={path="../trace"}

serde = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
tracing = {workspace = true}
tonic = {workspace = true}
prost = {workspace = true}
tokio = {workspace = true}
once_cell={workspace = true}

[build-dependencies]
tonic-build = {workspace = true}