[package]
name = "sig_server"
version = "0.1.0"
edition = "2021"

[dependencies]
trace={path="../trace"}
utils={path="../utils"}

serde = { workspace = true }
serde_bytes = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
tracing = {workspace = true}
tonic = {workspace = true}
prost = {workspace = true}
tokio = {workspace = true}
once_cell={workspace = true}
aws-nitro-enclaves-nsm-api = {workspace = true}
bytes = {workspace = true}
ed25519-dalek = {workspace = true}
rand = {workspace = true}
rsa = {workspace = true}
tokio-stream = {workspace = true}

[build-dependencies]
tonic-build = {workspace = true}

[target.x86_64-unknown-linux-gnu.dependencies]
proxy = { path = "../proxy" }
tokio-vsock = "0.7.0"