[package]
name = "sig_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sig_server"
path = "src/bin/main.rs"

[dependencies]
trace={path="../trace"}
utils={path="../utils"}

serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
tracing = {workspace = true}
tonic = {workspace = true}
prost = {workspace = true}
tokio = {workspace = true}
once_cell={workspace = true}
aws-nitro-enclaves-nsm-api = {workspace = true}
bytes = {workspace = true}
ed25519-dalek = {workspace = true}
rand = {workspace = true}
rsa = {workspace = true}
tokio-stream = {workspace = true}
hex = {workspace = true}
attestation-doc-validation = {workspace = true}
prost-types = {workspace = true}
sha2 = {workspace = true}
solana-sdk = {workspace =true}

[build-dependencies]
tonic-build = {workspace = true}

[dev-dependencies]
proxy = { path = "../proxy" }
ctor = {workspace = true}

[target.x86_64-unknown-linux-gnu.dependencies]
proxy = { path = "../proxy" }
tokio-vsock = "0.7.0"
vsock = "0.3"


