[package]
name = "utils"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
rand = {workspace = true}
rsa = {workspace = true}
pkcs1 = {workspace = true}
hex = {workspace = true}
serde_bytes = { workspace = true }
ed25519-dalek = {workspace = true}
prost = {workspace = true}
prost-types = {workspace = true}
bs58 = {workspace = true}
secp256k1 = {workspace = true}
sha2 = {workspace = true}
sha3 = {workspace = true}
tonic = {workspace = true}
tonic-middleware = {workspace = true}
